# hybrid-vector-search

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/src/: appr_brutef.cpp  appr_brutef_opt.cpp  appr_brutef_opt_nosimd.cpp  appr_brutef_opt_omp.cpp  appr_final.cpp  appr_sorted.cpp  brute_force.cpp  brute_force_foreach.cpp  brute_force_omp.cpp  brute_force_opt.cpp  distance.h  distance_simd.h  hybrid_vector_search.h  io.cpp  io.h  main.cpp  util.h  utils.h
data-analysis/: CMakeLists.txt  data.cpp  make_plot.py
rust/: Cargo.toml
rust-with-ngt/src/: main.rs
rust/src/: brute_force.rs  brute_force_opt.rs  lib.rs  main.rs  presorted_naive.rs  presorted_ngt.rs
